# NitroSystem

./: meson.build  meson.options
include/nnsys/g2d/: g2d_Animation_inline.h  g2d_CellAnimation.h  g2d_CellTransferManager.h  g2d_CharCanvas.h  g2d_Font.h  g2d_Image.h  g2d_Load.h  g2d_MultiCellAnimation.h  g2d_Node.h  g2d_OAM.h  g2d_OamSoftwareSpriteDraw.h  g2d_Renderer.h  g2d_RendererCore.h  g2d_SRTControl.h  g2d_Screen.h  g2d_Softsprite.h  g2d_TextCanvas.h
include/nnsys/g2d/fmt/: g2d_Anim_data.h  g2d_Cell_data.h  g2d_Character_data.h  g2d_Common_data.h  g2d_Font_data.h  g2d_MultiCell_data.h  g2d_Oam_data.h
include/nnsys/g2d/load/: g2d_NAN_load.h  g2d_NCE_load.h  g2d_NCG_load.h  g2d_NCL_load.h  g2d_NFT_load.h
include/nnsys/g3d/: gecom_inline.h  glbstate_inline.h  kernel_inline.h  model_inline.h  sbc_inline.h  util_inline.h
include/nnsys/g3d/binres/: res_struct_accessor_inline.h
include/nnsys/gfd/VramManager/: gfd_PlttVramMan_Types.h  gfd_TexVramMan_Types.h
include/nnsys/snd/: heap.h  main.h  player.h  sndarc.h  sndarc_loader.h  sndarc_stream.h
libraries/fnd/: meson.build
libraries/fnd/include/: heapcommoni.h
libraries/fnd/src/: expheap.c  list.c
libraries/g2d/: meson.build
libraries/g2d/include/: g2di_BGManipulator.h  g2di_BitReader.h  g2di_Dma.h  g2di_Mtx32.h  g2di_OamUtil.h  g2di_RendererMtxCache.h  g2di_RendererMtxStack.hpp  g2di_RendererMtxState.h
libraries/g2d/src/: g2d_Animation.c  g2d_CharCanvas.c  g2d_OamSoftwareSpriteDraw.c  g2d_Renderer.c  g2d_Softsprite.c
libraries/g2d/src/internal/: g2di_SplitChar.c
libraries/g2d/src/load/: g2d_Load.c  g2d_NAN_load.c  g2d_NCG_load.c  g2d_NCL_load.c  g2d_NFT_load.c  g2d_NMC_load.c  g2d_NOB_load.c
libraries/g3d/: meson.build
libraries/g3d/src/: gecom.c  sbc.c
libraries/gfd/: meson.build
libraries/gfd/src/VramManager/: gfd_FrameTexVramMan.c
libraries/mcs/: meson.build
libraries/snd/: meson.build
libraries/snd/src/: capture.c  heap.c  main.c  player.c  sndarc.c  sndarc_loader.c  sndarc_stream.c
subprojects/: NitroSDK.wrap
